# Example

./: .github.cmake  .travis.cmake  .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  net.purplekarrot.Example.yml
.github/actions/action-conan-install/: Dockerfile  action.yml
.github/workflows/: ci.yml
Failures/: CMakeLists.txt  fpe.c
Hello/: CMakeLists.txt  hello.c
Measurements/: CMakeLists.txt
Sanitizers/: CMakeLists.txt  asan.c  msan.c  tsan.c
Swift/: CMakeLists.txt
